--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ body{
     background-color: red;
     position: absolute;
     border-radius: 50%;
-    animation: blink 1s infinite;
+    animation: blink 0.5s infinite;
 
 }
 
@@ -54,4 +54,12 @@ body{
         opacity: 0.5;
     }
     
+}
+
+.snake{
+    width: 20px;
+    height: 20px;
+    background-color: chartreuse;
+    position: absolute;
+    border-radius: 5px;
 }
